# PEMT

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  CITATION.cff  LICENSE  README.md  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions-and-others.md
.github/workflows/: code-formatter.yml
data/mapper/: chembl_uniprot_mapping.tsv  chembl_uniprot_mapping.txt  chemical_names.json  hgnc_mapper.tsv  rare disease_chemical_names.json  rare disease_gene_to_chemicals.json
data/patent_dumps/: cas_enumerated_patent_data.tsv  gene_enumerated_patent_data.tsv  rare disease_chemicals.tsv  rare disease_patent_data.tsv
docs/: Makefile
docs/source/: cli.rst  conf.py  development.rst  index.rst  introduction.rst
example/: epidemologic_distribution_orphanet.tsv  example.py  orphanet_gene_by_prevelance.tsv  visualization.py
src/: constants.py  experimental_data_extraction.py  patent_chemical_harmonizer.py  patent_extractor.py
src/pemt/: __init__.py  __main__.py  cli.py  constants.py  utils.py
src/pemt/chemical_extractor/: __init__.py  experimental_data_extraction.py
src/pemt/patent_extractor/: __init__.py  patent_chemical_harmonizer.py  patent_enrichment.py
src/pet/: __main__.py  cli.py  constants.py
src/pet/patent_extractor/: patent_enrichment.py
tests/: __init__.py  test_input.py
tests/resources/: dummy_gene.tsv
