[metadata]
name = PEMT
version = 0.0.2-dev
description = A tool for extractor patent literature in drug discovery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Fraunhofer-ITMP/PEMT
project_urls =
	Bug Tracker = https://github.com/Fraunhofer-ITMP/PEMT/issues
	Source Code = https://github.com/Fraunhofer-ITMP/PEMT
	Documentation = https://pemt.readthedocs.io/en/latest/
author = Yojana Gadiya
author_email = yojana.gadiya@itmp.fraunhofer.de
maintainer = Yojana Gadiya
maintainer_email = yojana.gadiya@itmp.fraunhofer.de
license = MIT
license_file = LICENSE
classifiers =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Bio-Informatics
keywords = Drug Discovery, Patent literature, Bioinformatics

[options]
install_requires =
	click==7.1.2
	pandas==1.3.4
	chembl_webresource_client==0.10.7
	tqdm==4.60.0
	selenium==3.141.0
	pubchempy==1.0.4
zip_safe = false
include_package_data = True
python_requires = >=3.8
packages = find:
package_dir =
	= src

[options.packages.find]
where = src

[options.extras_require]
docs =
	sphinx
	sphinx-rtd-theme
	sphinx-click
	sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
	pemt = pemt.cli:main

[doc8]
max-line-length = 120

[coverage:run]
branch = True
source = pemt

[coverage:report]
show_missing = True
exclude_lines =
	def __str__
	def __repr__
